$Id$

1.4.5 TBD

* use more precise values for graph zoom bounds.
* specify explicitly the default graph height.
* strip leading and trailing whitespace from tuples (heartbeats, stepsizes,
   resolutions, steps, xffs, plotasLINE1, plotasLINE2, etc).
* added fixedscale as a per host/service/database/source parameter.  for
   backward compatibility it still works when specified as a cgi argument.
   note that it affects the vertical axis and the values in the legend.
* handle # in database and data source names
* ensure the directory containing perfdata log is writeable by nagios user.
* added export.cgi to dump rrd data in csv or xml format.
* automatically determine groups from the Nagios servicegroup definitions.
* fixed heartbeats/stepsizes/resolutions bug.  this time for real.  really.
* retain a copy of any modifications made to nagios.cfg and commands.cfg when
   removing rpm or deb packages.
* fixed install.pl to work with icinga.
* renamed upgrade.pl to flat2hier.pl
* fixed install option typo for --check-prerequisites in install instructions.
* encourage standalone installations rather than overlays unless installing
   from rpm or deb package.
* encourage nagios pre-flight checks before restarting nagios.

1.4.4 2011-01-15

* this release includes many changes to the default map configuration and the
   default colors and labels.  this was designed to make new installations
   easier right out of the box.  the bug fixes and feature additions are
   backward compatible, so configuration files from existing installations
   will still work.  see the upgrade section of the README file for details.
* overhaul of install.pl.  added option to check for prerequisites (poorly
   configured rrdtool and gd have been major source of installation woes).
   added options for different layouts (overlay or separate) and locations.
   the install script now respects the DESTDIR conventions for packaging.