@@ -2,6 +2,8 @@ $Id$
 
 1.4.5 TBD
 
+* change authentication behavior when nagios default_user_name is defined.
+   behavior is now aligned to that defined in nagios.
 * use more precise values for graph zoom bounds.
 * specify explicitly the default graph height.
 * strip leading and trailing whitespace from tuples (heartbeats, stepsizes,
